--- a/appply-now/package.json
+++ b/appply-now/package.json
@@ -7,15 +7,19 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "draft-js": "^0.11.7",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
     "sweetalert2": "^11.10.7",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "yup-phone": "^1.2.12"
   },
   "scripts": {
     "start": "react-scripts start",
